Fix scrollbar problem

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -53,3 +53,9 @@ table td {
 		width: 100%;
 	}
 }
+
+.infowindow {
+	line-height: 1.35;
+	overflow: hidden;
+	white-space: nowrap;
+}
